--- a/client/battle.css
+++ b/client/battle.css
@@ -19,6 +19,15 @@ progress{
     content: "100/100";
     color:blueviolet
 }
+
+#endBox{
+    border: 2px solid black;
+    padding: 10px 0;
+    width:50%;
+    display: block;
+    visibility: hidden
+}
+
 #boardBox{
     display: flex;
     flex-wrap: wrap;
