--- a/client/battle.css
+++ b/client/battle.css
@@ -19,7 +19,9 @@ progress{
     content: "100/100";
     color:blueviolet
 }
-
+#start{
+    visibility:visible
+}
 #endBox{
     border: 2px solid black;
     padding: 10px 0;
@@ -39,6 +41,7 @@ progress{
     height: auto;
     min-height: 20%;
     overflow: hidden;
+    visibility: hidden
 }
 
 
