--- a/client/post.css
+++ b/client/post.css
@@ -1,17 +1,24 @@
+.main{
+    display: flex;
+    min-height: 100vh;
+    white-space: nowrap;
+    
+}
 
 
 h1{
-    position : relative;
-    text-align: center;
-    font-size: 40px;
+    font-size: 30px;
     padding-top: 5%;
-
+    font-family: "MedievalSharp";
+    position: relative;
+    text-align: center;
+    
 }
 
 form{
     text-align: center;
-    padding: 25px 40px;
-    
+    padding: 15px 20px;
+
 }
 
 .container{
@@ -20,9 +27,9 @@ form{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
-    padding: 20px 100px;
-
+    height: 80%;
+    padding: 20px 50px;
+    
     
 }
 
@@ -43,76 +50,59 @@ form{
 }
 
 .contentBox{
-    max-width: 850px;
+    max-width: 400px;
     justify-content: center;
-    align-items: center;
-    background-color:rgb(164, 16, 16);
+    background-image: linear-gradient(red,yellow, green);
     width: 100%;
-    height: 100%;
-    margin: 30px;
-    border-radius: 45px;
+    height: 80%;
+    margin: 30px auto;
+    border-radius: 25px;
     border: 2px solid black;
+   
     
 }
 
 .field {
     width: 100%;
-    height: 100px; 
+    height: 50px; 
     outline: none;
     background-color: linen;
     border: 2px solid rgba(0,0,0,0);
-    font-size: 30px;
-    margin-bottom: 80px;
-    margin-top: 30px;
+    font-size: 20px;
+    margin-bottom: 20px;
+    margin-top: 10px;
     transition: 2ms;
-    border-radius: 45px;
+    border-radius: 25px;
 
 }
 label {
-    font-size: 30px;
+    font-size: 20px;
+    font-family: "MedievalSharp"
 }
 
 
 #questionSubmit{
     width: 50%;
-    height: 80px; 
-    font-size: 30px;
-    border-radius: 45px;
+    height: 50px; 
+    font-size: 20px;
+    border-radius: 25px;
+    font-family: "MedievalSharp"
 }
 
-#returnButton {
-    background-color: #3498db;
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
+.icon-button{
     text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 10px;
+}
+
+.icon-button button {
+    background-color: transparent;
+    border: none;
     cursor: pointer;
-    position: relative;
-    overflow: hidden;
+    background-image: url('home.png');
+    background-size: contain; /* Adjust the size to fit your image */
+    background-repeat: no-repeat;
+    width: 100px; /* Set the width of the button */
+    height: 80px; /* Set the height of the button */
 }
-
-#returnButton:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 0;
-    height: 0;
-    border-left: 40px solid transparent;
-    border-bottom: 40px solid transparent;
-    border-right: 40px solid transparent;
-    border-top: 40px solid #3498db;
-}
-
-#returnButton:hover {
-    background-color: #2980b9;
-}
-
-
 
 
 /*input[type="text"] {
@@ -121,10 +111,7 @@ label {
 */
 
 
-.field:focus{
-    background-color:cornsilk;
-    border: 2px solid rgbs(30, 85, 250, 0.47);
-}
+
 
 
 /*@media screen and (max-width:850px){
