--- a/client/hub.css
+++ b/client/hub.css
@@ -91,7 +91,7 @@ button{
     font-weight: 600;
     border-radius: 3px;
     padding: 12px 24px;
-    padding-bottom: 2%;
+    margin-bottom: 1%;
     border: 0;
     color: #fff;
     background: #c10326;
