--- a/client/post.css
+++ b/client/post.css
@@ -1,17 +1,12 @@
-.main{
-    display: flex;
-    min-height: 100vh;
-    white-space: nowrap;
-    
+body {
+    margin: 0;
 }
-
-
 h1{
-    font-size: 30px;
-    padding-top: 5%;
+    font-size: 24px;
     font-family: "MedievalSharp";
     position: relative;
     text-align: center;
+    padding-bottom: 10px;
     
 }
 
@@ -22,13 +17,11 @@ form{
 }
 
 .container{
-    position: relative; 
+    position: absolute; 
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 80%;
-    padding: 20px 50px;
     
     
 }
@@ -36,57 +29,65 @@ form{
 .container:after{
     content: '';
     position: absolute;
-    left: 0;
-    top:0;
     width: 100%;
-    height: 100%;
-    background: url(./assets/battlecell.jpg) no-repeat center;
+    height: 130%;
+    background: url(./assets/grass-plain.jpeg) no-repeat center;
     background-size: cover;
     z-index: -1;
     filter:blur(5px);
 
 
-
 }
 
 .contentBox{
-    max-width: 400px;
+    max-width: 40%;
     justify-content: center;
     background-image: linear-gradient(red,yellow, green);
     width: 100%;
-    height: 80%;
-    margin: 30px auto;
-    border-radius: 25px;
-    border: 2px solid black;
+    border-radius: 15px;
+    border: 3px solid black;
+    margin-top: 80px; 
+    box-sizing: border-box;
    
     
 }
 
 .field {
-    width: 100%;
-    height: 50px; 
+    width: 80%;
+    height: 35px; 
     outline: none;
     background-color: linen;
     border: 2px solid rgba(0,0,0,0);
-    font-size: 20px;
-    margin-bottom: 20px;
-    margin-top: 10px;
+    font-size: 16px;
+    margin: 10px 0;
     transition: 2ms;
-    border-radius: 25px;
+    border-radius: 15px;
+    text-align: center;
+
+}
+
+#question {
+    width: 90%;
+    margin-top: 15px;
+    margin-bottom: 15px;
 
 }
 label {
-    font-size: 20px;
+    font-size: 18px;
     font-family: "MedievalSharp"
 }
 
 
 #questionSubmit{
-    width: 50%;
-    height: 50px; 
-    font-size: 20px;
-    border-radius: 25px;
-    font-family: "MedievalSharp"
+    width: 30%;
+    height: 40px; 
+    font-size: 16px;
+    border-radius: 20px;
+    font-family: "MedievalSharp";
+    margin-top: 2%;
+    outline: none;
+    background-color: rgb(239, 227, 66);
+    border: 3px solid rgba(199, 36, 36, 0.682);
 }
 
 .icon-button{
@@ -100,8 +101,10 @@ label {
     background-image: url('home.png');
     background-size: contain; /* Adjust the size to fit your image */
     background-repeat: no-repeat;
-    width: 100px; /* Set the width of the button */
-    height: 80px; /* Set the height of the button */
+    width: 80px; /* Set the width of the button */
+    height: 60px; /* Set the height of the button */
+    margin-bottom: 10px;
+    margin-left: 10px;
 }
 
 
@@ -114,8 +117,9 @@ label {
 
 
 
-/*@media screen and (max-width:850px){
+/* Media query for smaller screens */
+@media screen and (max-width: 600px) {
     .contentBox {
-     grid-template-columns: 1fr ;
+        max-width: 100%; /* Adjusted max-width for smaller screens */
     }
- }
+}
