--- a/client/hub.css
+++ b/client/hub.css
@@ -4,12 +4,12 @@
 }
 
 body{
-    background-image: url(assets/grass-plain.jpeg);
+    background-image: url(assets/medievalVillage.jpeg);
     background-size: cover;
 }
 
 #pannelBox{
-    background-color: red;
+    background-color: rgba(255, 0, 0, 0.313);
     margin-top: 3%;
     border: 2px solid black;
     display: block;
@@ -23,22 +23,19 @@ body{
 }
 
 #titleBoxBackground{
-    background-color: limegreen;
     text-align: center;
     border-radius: 40px;
-    border: 4px solid black;
+
 }
 
 h1{
     font-size: 100px ;
     text-decoration: underline;
-    border-radius: 40px;
-    border: 3px solid black;
-    border-top: 30%;
     width: 50%;
     text-align: center;
     margin: auto;
     margin-top: 2%;
+
 }
 
 h2{
@@ -47,6 +44,7 @@ h2{
     padding-bottom: 5%;
     font-size: 60px;
     font-weight: bold;
+    text-decoration: underline;
 }
 
 .henry{
@@ -88,17 +86,26 @@ button{
     cursor: pointer;
     font-weight: 600;
     border-radius: 40px;
-    padding: 20px 24px;
+    padding: 10px 20px;
     margin-bottom: 1%;
     border: 0;
     color: #fff;
-    background: #c10326;
-    line-height: 1.15;
-    font-size: 16px;
+    background: #03c142b0;
+    border: 2px solid rgb(26, 81, 32);
+    font-size: 18px;
     :hover {
     transition: all .1s ease;
-    box-shadow: 0 0 0 0 #fff, 0 0 0 3px #1DE9B6;
     }
+}
+
+#postBox{
+    border: 2px solid rgba(0, 0, 0, 0.007);
+    border-radius: 25px;
+    background-color: #ffffff68;
+    width: 40%;
+    margin: 0 auto;
+    font-size: 18px;
+
 }
 
 *{
