--- a/client/post.css
+++ b/client/post.css
@@ -31,10 +31,9 @@ form{
     position: absolute;
     width: 100%;
     height: 130%;
-    background: url(./assets/grass-plain.jpeg) no-repeat center;
+    background: url(./assets/medievalVillage.jpeg) no-repeat center;
     background-size: cover;
     z-index: -1;
-    filter:blur(5px);
 
 
 }
