--- a/client/post.css
+++ b/client/post.css
@@ -1,18 +1,26 @@
 body {
     margin: 0;
 }
+
+
 h1{
-    font-size: 24px;
+    font-size: 35px;
     font-family: "MedievalSharp";
     position: relative;
     text-align: center;
     padding-bottom: 10px;
+    border: 2px solid rgba(0, 0, 0, 0);
+    border-radius: 25px;
+    width: 80% ;
+    margin: 0 auto;
+    margin-top: 2%;
+    text-decoration: underline;
     
 }
 
 form{
     text-align: center;
-    padding: 15px 20px;
+    padding: 30px;
 
 }
 
@@ -23,17 +31,18 @@ form{
     align-items: center;
     width: 100%;
     
-    
 }
 
 .container:after{
     content: '';
     position: absolute;
+    justify-content: center;
     width: 100%;
     height: 130%;
     background: url(./assets/medievalVillage.jpeg) no-repeat center;
     background-size: cover;
     z-index: -1;
+    box-sizing: border-box;
 
 
 }
@@ -41,52 +50,60 @@ form{
 .contentBox{
     max-width: 40%;
     justify-content: center;
-    background-image: linear-gradient(red,yellow, green);
-    width: 100%;
-    border-radius: 15px;
-    border: 3px solid black;
-    margin-top: 80px; 
+    background: rgba(255, 255, 255, 0.245) url(./assets/formbackground3.png) no-repeat center;
+    background-size: 100% auto;
+    width: 120%;
+    border-radius: 30px;
+    margin-top: 30px;
     box-sizing: border-box;
    
     
 }
 
 .field {
-    width: 80%;
+    width: 70%;
     height: 35px; 
     outline: none;
-    background-color: linen;
+    background-color: rgba(250, 240, 230, 0.632);
     border: 2px solid rgba(0,0,0,0);
     font-size: 16px;
-    margin: 10px 0;
+    margin-top: 26px;
+    margin-bottom: 15px;
     transition: 2ms;
     border-radius: 15px;
     text-align: center;
 
 }
+input::placeholder {
+    font-family: "MedievalSharp";
+    font-size: 16px;
+}
 
 #question {
     width: 90%;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    border: 2px solid rgba(0, 0, 0, 0.507);
 
 }
-label {
-    font-size: 18px;
-    font-family: "MedievalSharp"
+
+#correct {
+    margin-bottom: 10px;
+    margin-top: 50px;
 }
+
 
 
 #questionSubmit{
     width: 30%;
-    height: 40px; 
-    font-size: 16px;
+    height: 50px; 
+    font-size: 20px;
     border-radius: 20px;
     font-family: "MedievalSharp";
-    margin-top: 2%;
-    outline: none;
+    margin-top: 20px;
+    margin-bottom: 0;
     background-color: rgb(239, 227, 66);
-    border: 3px solid rgba(199, 36, 36, 0.682);
+    border: 3px solid rgba(123, 23, 23, 0.682);
 }
 
 .icon-button{
@@ -100,10 +117,11 @@ label {
     background-image: url('home.png');
     background-size: contain; /* Adjust the size to fit your image */
     background-repeat: no-repeat;
-    width: 80px; /* Set the width of the button */
-    height: 60px; /* Set the height of the button */
+    width: 100px; /* Set the width of the button */
+    height: 80px; /* Set the height of the button */
     margin-bottom: 10px;
     margin-left: 10px;
+    margin-top: 0;
 }
 
 /*tudorAvatar{
