--- a/client/post.css
+++ b/client/post.css
@@ -1,5 +1,7 @@
 body {
     margin: 0;
+    background: url(./assets/medievalVillage.jpeg);
+    background-size: cover;
 }
 
 
@@ -39,8 +41,6 @@ form{
     justify-content: center;
     width: 100%;
     height: 130%;
-    background: url(./assets/medievalVillage.jpeg) no-repeat center;
-    background-size: cover;
     z-index: -1;
     box-sizing: border-box;
 
