--- a/client/battle.css
+++ b/client/battle.css
@@ -9,7 +9,7 @@ body{
     text-align: justify;
     height: 100%;
     background-color: rgb(122, 94, 59);
-    
+
 }
 p {
     border: 2px solid black ;
@@ -17,18 +17,18 @@ p {
     text-align: center;
     align-content: center;
     width: 50%;
-    overflow: hidden;  
+    overflow: hidden;
     font-size: 2vw;
     box-sizing: border-box;
     margin: 5px auto;
-    
+
 }
 #Bars{
     position: absolute;
     width: 90%;
     height: 70%;
     visibility:hidden;
-    
+
 
 }
 #tudorAvatar{
@@ -77,7 +77,7 @@ p {
     display: inline;
     box-sizing: border-box;
     border: none;
-    text-decoration: underline; 
+    text-decoration: underline;
     margin: 0;
     font-size: 1.5em;
 
@@ -86,13 +86,14 @@ p {
     display: inline;
     box-sizing: border-box;
     border: none;
-    text-decoration: underline; 
+    text-decoration: underline;
     margin: 0;
     font-size: 1.5em;
 }
 #character {
     padding: 0 40% 0 3%;
 }
+
 #HealthH{
     padding: 0 3% 0 10%;
 }
@@ -102,16 +103,34 @@ p {
 #HealthS {
     padding: 0 3% 0 50%;
 }
-#tudor progress{
-    height: 70%;
+#tudor progress, #student progress{
+    height: 30px;
+    padding: 5px;
+    margin-top: 10px;
     width: 90%;
     content: "100/100";
 }
 
-#student progress{
-    height: 70%;
-    width: 90%;
-    content: "100/100";
+progress {
+    border-radius: 10px; /* Rounded edges */
+    /* Remove default appearance */
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+progress::-moz-progress-bar {
+    background-color: green;
+    border-radius: 10px; /* Rounded edges */
+}
+
+progress::-webkit-progress-bar {
+    background-color: #eee; /* Light grey background */
+    border-radius: 10px; /* Rounded edges */
+}
+
+progress::-webkit-progress-value {
+    background-color: green;
+    border-radius: 10px; /* Rounded edges */
 }
 
 #start{
@@ -208,7 +227,7 @@ p {
     width: 100%;
     flex-direction: row;
     background-color: rgb(210, 210, 210)
-      
+
    }
 
 
