--- a/client/battle.css
+++ b/client/battle.css
@@ -34,7 +34,7 @@ p {
 #tudorAvatar{
     position: absolute;
     top: 2%;
-    left: 60%;
+    left: 55%;
     z-index: -1;
     height: 70%;
     width: 50%;
@@ -55,7 +55,7 @@ p {
     left: 18%;
     top: 5%;
     text-align: center;
-    border: 2px solid black;
+    border: 5px solid black;
     border-radius: 15px;
     width: 35%;
     height: 20%;
@@ -66,7 +66,7 @@ p {
     left: 55%;
     top: 73%;
     text-align: center;
-    border: 2px solid black;
+    border: 5px solid black;
     border-radius: 15px;
     width: 35%;
     height: 20%;
@@ -115,15 +115,19 @@ p {
 }
 
 #start{
+    border: none;
     display: flex;
     justify-content: center;
     align-items: center;
     visibility:visible;
     position: absolute;
+    padding: 0 0 6% 0;
     left: 25%;
-    top: 30%;
-    height: 40%;
-    background-color: rgb(200, 200, 200)
+    top: 5%;
+    height: 80%;
+    background: url(./assets/formbackground3.png) no-repeat center;
+    background-size: 100% auto;
+    font-size: 4em;
 }
 #start:hover{
     background-color: rgb(117, 117, 117);
@@ -137,22 +141,29 @@ p {
     position: absolute;
     left: 25%;
     top: 30%;
-    border: 2px solid black;
-    border-radius: 15px;
+    /* border: 2px solid black;
+    border-radius: 15px; */
     padding: 10px 0;
     width:50%;
     height: 40%;
     visibility: hidden;
-    background-color: rgb(210, 210, 210)
+    background: url(./assets/formbackground3.png) no-repeat center;
 }
 #endBox p{
+    position: relative;
+    bottom: 15%;
     border: none;
 }
 #returnButton{
-    border-radius: 15px;
-    padding: 20% 0;
-    height: 100%;
-    width: 100%
+    width: 100%;
+    height: 50px; 
+    font-size: 20px;
+    border-radius: 20px;
+    font-family: "MedievalSharp";
+    margin-top: 20px;
+    margin-bottom: 0;
+    background-color: rgb(239, 227, 66);
+    border: 3px solid rgba(123, 23, 23, 0.682);
 }
 
 #boardBox{
